Fix a bug in DefaultPrior.init_global_params

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -85,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 1 1 1 3 1 2 1 1 0 1 1 1 1 1 1 1 1 1 1 0 3 1 1 1 2 1 1 1 1 1 1 2 1 2 1 2\n",
-      " 0 2 2 1 1 1 1 1 3 3 3 1 2 1 1 1 1 3 2 1 1 1 1 2 0 2 1 1 2 2 2 2 1 1 2 1 2\n",
-      " 2 1 1 2 1 3 1 1 1 2 1 1 0 1 1 2 1 1 2 0 2 1 1 1 2 2]\n",
-      "(array([ 4, 21, 45, 46, 47, 54, 79], dtype=int64),)\n"
+      "[1 1 1 1 1 1 1 4 1 2 2 2 1 1 0 1 1 1 1 2 2 1 3 1 1 1 1 1 1 1 1 1 1 1 2 1 1\n",
+      " 2 1 1 2 1 1 1 1 1 1 3 2 1 3 2 1 1 1 1 2 1 1 1 2 1 1 0 1 2 1 1 1 1 1 1 3 1\n",
+      " 1 2 1 2 1 1 2 1 0 1 1 0 2 1 0 1 1 2 1 1 1 1 0 1 1 1]\n",
+      "(array([ 7, 22, 47, 50, 72], dtype=int64),)\n"
      ]
     }
    ],
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.006807643694776954}\n"
+      "{'eps_sigma2': 0.005733414508936351}\n"
      ]
     }
    ],
@@ -126,25 +126,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.830 (split, n = 120)\n",
-      "\tVal: -0.046 (leaf, n = 102)\n",
-      "\tVal: -0.032 (leaf, n = 18)\n",
-      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.04601371 -0.0316645          nan         nan         nan\n",
-      "         nan         nan]\n"
+      "X_1 <= 0.116 (split, n = 120)\n",
+      "\tX_0 <= 0.093 (split, n = 15)\n",
+      "\t\tVal: 0.003 (leaf, n = 1)\n",
+      "\t\tVal: 0.008 (leaf, n = 14)\n",
+      "\tX_0 <= 0.287 (split, n = 105)\n",
+      "\t\tVal: 0.005 (leaf, n = 34)\n",
+      "\t\tVal: 0.035 (leaf, n = 71)\n",
+      "[ 1  0  0 -1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[       nan        nan        nan 0.00320229 0.00783413 0.00538357\n",
+      " 0.03476661        nan        nan        nan        nan        nan\n",
+      "        nan        nan        nan        nan]\n"
      ]
     }
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[1].trees[0]\n",
+    "tree_sp : Tree = bart.sampler.trace[-1].trees[72]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
@@ -203,19 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022765587579364577,\n",
+       "{'bart': 0.02370939871385235,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283631252247}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,15 +241,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31903534  0.33416735  0.23065336  0.34556637  0.40958573  0.45244747\n",
-      " -0.36479328  0.40345105 -0.06177816  0.14769672  0.32474354  0.35242618]\n",
+      "[ 0.36899463  0.33800563  0.27153915  0.31520681  0.34463921  0.38089753\n",
+      " -0.41651139  0.39616038 -0.11335028 -0.00896246  0.22936939  0.34190874]\n",
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
       " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +271,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
