--- a/notebooks/test_bcf.ipynb
+++ b/notebooks/test_bcf.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,33 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running iteration 0\n",
-      "Running iteration 10\n",
-      "Running iteration 20\n",
-      "Running iteration 30\n",
-      "Running iteration 40\n",
-      "Running iteration 50\n",
-      "Running iteration 60\n",
-      "Running iteration 70\n",
-      "Running iteration 80\n",
-      "Running iteration 90\n",
-      "Running iteration 100\n",
-      "Running iteration 110\n",
-      "Running iteration 120\n",
-      "Running iteration 130\n",
-      "Running iteration 140\n",
-      "Running iteration 150\n",
-      "Running iteration 160\n",
-      "Running iteration 170\n",
-      "Running iteration 180\n",
-      "Running iteration 190\n"
+      "Running iteration 0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Tree' object has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 14\u001b[0m\n\u001b[0;32m      1\u001b[0m bcf \u001b[38;5;241m=\u001b[39m BCF(\n\u001b[0;32m      2\u001b[0m     n_mu_trees\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m200\u001b[39m,       \u001b[38;5;66;03m# Number of prognostic effect trees\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     n_tau_trees\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m,       \u001b[38;5;66;03m# Number of treatment effect trees\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m     random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m\n\u001b[0;32m     12\u001b[0m )\n\u001b[1;32m---> 14\u001b[0m \u001b[43mbcf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_train\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\bcf\\bcf.py:47\u001b[0m, in \u001b[0;36mBCF.fit\u001b[1;34m(self, X, y, z)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msampler\u001b[38;5;241m.\u001b[39mprior\u001b[38;5;241m.\u001b[39mfit(data)\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msampler\u001b[38;5;241m.\u001b[39madd_data(data)\n\u001b[1;32m---> 47\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msampler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndpost\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnskip\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\samplers.py:82\u001b[0m, in \u001b[0;36mSampler.run\u001b[1;34m(self, n_iter)\u001b[0m\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;66;03m# print(self.temp_schedule)\u001b[39;00m\n\u001b[0;32m     81\u001b[0m     temp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtemp_schedule(\u001b[38;5;28miter\u001b[39m)\n\u001b[1;32m---> 82\u001b[0m     current \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mone_iter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_trace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     83\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrace\u001b[38;5;241m.\u001b[39mappend(current)\n\u001b[0;32m     84\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrace\n",
+      "File \u001b[1;32mc:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\bcf\\bcf_sampler.py:70\u001b[0m, in \u001b[0;36mBCFSampler.one_iter\u001b[1;34m(self, current, temp, return_trace)\u001b[0m\n\u001b[0;32m     66\u001b[0m move_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msample_move(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmu\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \n\u001b[0;32m     67\u001b[0m move \u001b[38;5;241m=\u001b[39m move_class(\n\u001b[0;32m     68\u001b[0m     current\u001b[38;5;241m=\u001b[39miter_current\u001b[38;5;241m.\u001b[39mmu_view, trees_changed\u001b[38;5;241m=\u001b[39m[k], tol\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtol\n\u001b[0;32m     69\u001b[0m )\n\u001b[1;32m---> 70\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mmove\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpropose\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerator\u001b[49m\u001b[43m)\u001b[49m: \u001b[38;5;66;03m# Check if a valid move was proposed\u001b[39;00m\n\u001b[0;32m     71\u001b[0m     \u001b[38;5;66;03m# Metropolis–Hastings\u001b[39;00m\n\u001b[0;32m     72\u001b[0m     Z \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgenerator\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     73\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Z \u001b[38;5;241m<\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(temp \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprior\u001b[38;5;241m.\u001b[39mtrees_log_mh_ratio(move, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmu\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n",
+      "File \u001b[1;32mc:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\moves.py:32\u001b[0m, in \u001b[0;36mMove.propose\u001b[1;34m(self, generator)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtol):\n\u001b[0;32m     31\u001b[0m     proposed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent\u001b[38;5;241m.\u001b[39mcopy(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrees_changed)\n\u001b[1;32m---> 32\u001b[0m     success \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtry_propose\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproposed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerator\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m success:\n\u001b[0;32m     34\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproposed \u001b[38;5;241m=\u001b[39m proposed\n",
+      "File \u001b[1;32mc:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\moves.py:69\u001b[0m, in \u001b[0;36mGrow.try_propose\u001b[1;34m(self, proposed, generator)\u001b[0m\n\u001b[0;32m     67\u001b[0m tree \u001b[38;5;241m=\u001b[39m proposed\u001b[38;5;241m.\u001b[39mtrees[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrees_changed[\u001b[38;5;241m0\u001b[39m]]\n\u001b[0;32m     68\u001b[0m node_id \u001b[38;5;241m=\u001b[39m generator\u001b[38;5;241m.\u001b[39mchoice(tree\u001b[38;5;241m.\u001b[39mleaves)\n\u001b[1;32m---> 69\u001b[0m var \u001b[38;5;241m=\u001b[39m generator\u001b[38;5;241m.\u001b[39mintegers(\u001b[43mtree\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mp)\n\u001b[0;32m     70\u001b[0m threshold \u001b[38;5;241m=\u001b[39m generator\u001b[38;5;241m.\u001b[39mchoice(tree\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mthresholds[var])\n\u001b[0;32m     71\u001b[0m success \u001b[38;5;241m=\u001b[39m tree\u001b[38;5;241m.\u001b[39msplit_leaf(node_id, var, threshold)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Tree' object has no attribute 'data'"
      ]
     }
    ],
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,19 +96,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.436541486119782\n"
+      "[ 2.71684358  1.34472509 -0.63365769  1.02608723  1.73888124  1.9754376\n",
+      "  1.79107368  2.80794892  2.4197341   1.74576228 -0.16727784  2.01422626\n",
+      "  0.1796448   0.01390835  2.90731807  0.11659677  0.30721345 -1.56917465\n",
+      " -1.5917818  -1.49401607  3.72622603  2.28159178 -1.23463075  2.33575867\n",
+      " -0.74566678 -1.71445183 -1.28974473 -1.43459943  5.0396901  -1.39969616\n",
+      "  0.84155053 -0.8650911   1.2997825  -1.59230643 -1.49262385  2.54808842\n",
+      " -0.77508353  1.83791286  2.37985367 -1.65157205 -1.03087048  7.44263279\n",
+      "  1.27203707  0.47939415 -1.01221795 -0.67920555  2.36234222  1.94114296\n",
+      "  3.34380179 -0.39514    -1.01849692  2.05183846  0.60072226 -0.92865176\n",
+      "  2.34918754  2.18070178 -0.32870426  1.97812309 -0.58331061  1.3483261\n",
+      "  2.33120779  0.27050157 -1.9643076   4.61931388  2.48856719 -0.88979993\n",
+      "  1.64750676  1.32543523  1.47943408  1.7288232  -0.634925    0.40661282\n",
+      "  0.67726992  1.97657709  1.3997243   0.16149443 -1.00902911  0.34309148\n",
+      " -0.31393897  0.13184707  0.23879523 -0.85217321  0.07067459  4.33215248\n",
+      " -0.58645334 -1.57467134  1.96731155  2.55231628  2.19960865 -0.69055203\n",
+      "  1.89162165 -1.24875562 -0.92987325  0.23879614  2.01948447  1.73115928\n",
+      " -1.8495246  -1.54088942  4.32986106  2.97934377  0.16152519  3.42539928\n",
+      "  1.85212221 -1.07072475  0.66537237  1.41875809  1.1857117   0.08268711\n",
+      "  1.40906181 -1.90949075 -0.41775064 -1.92462591  1.97569722 -0.58333704\n",
+      "  3.83475242  2.01980261  1.24085354  4.54448353  2.42078782 -0.97496303\n",
+      "  1.93354191  0.93579675  1.38726012 -0.71520551 -0.52628089  2.5057637\n",
+      "  0.01365932  0.11407162  3.56867291  1.20926367  4.67918851  1.71899109\n",
+      " -1.05231658  1.90310586 -1.00329701 -1.11080659 -1.01480873  2.68529349\n",
+      "  6.91617509  0.46735434 -0.9800792   3.03634934 -1.21751875 -0.6410514\n",
+      " -1.60839976 -1.44707085  0.75726192  1.94015637  2.29267701 -1.86748613\n",
+      " -1.56665009  0.72392575  9.05265874  2.06555139 -0.7563317   2.48045426\n",
+      " -1.86648546  0.20609616 -1.09878472  3.86208658  0.93953119  1.63711962\n",
+      "  1.94332802  1.96442492  2.24482911 -0.3793392   3.08548595  1.99989094\n",
+      "  3.05146151  0.48479346  1.02592059  3.24331902  1.65732949 -0.5622844\n",
+      "  0.30385692 -0.91814054  1.65609112 -1.97153224  1.1374565   1.75769001\n",
+      " -0.05306935  4.19140437 -0.07207406  1.42957735 -1.92509518 -1.75201433\n",
+      "  2.94209098  1.0987534   3.54379127  0.4595052  -0.82298537 -1.01283117\n",
+      "  1.63502697  1.70726743  1.52824582  0.41279879  1.39743493 -1.2558341\n",
+      "  1.33556502  2.18067723 -1.53386407  4.63570275  0.71628378 -1.4044328\n",
+      "  0.91694755  2.83722595  4.93886881  0.22031756  2.06553467  1.54669433\n",
+      "  4.38294783  2.12908428  1.97201621  6.0716018  -0.47753639  0.13868656\n",
+      " -1.10437485  0.2577962   0.797882    2.38321875 -1.95331415  2.18344712\n",
+      "  1.16449965  3.1589423  -0.67005319  0.2364893  -1.23734013  3.12044056\n",
+      " -1.34699592  3.27496502 -1.20691954  1.11542341  3.51833534  1.80487442\n",
+      " -1.95971117  2.16398576 -0.95578451  0.67883604 -0.89087263  0.74378772\n",
+      " -1.0105886   1.87090815  0.92357752  3.05106101  0.76322014 -1.8253216\n",
+      "  3.17981975 -1.79733674 -0.31343276  1.58886208  2.03421823  1.01379909\n",
+      "  1.92488751 -0.60423054  2.16239045  1.70335863  1.80897395  1.92210546\n",
+      "  0.88114829  3.65942381  0.0107052   2.4062535  -1.20653023  1.53159795\n",
+      "  1.93068114  3.96032132  0.54231799  3.71243248 -1.28696223  2.60409976\n",
+      "  2.10402779  0.18242191  2.71266577  2.71100651 -0.47214338  2.0398753\n",
+      "  0.97632857  0.53503262 -1.5627872  -1.98411    -0.51575534 -1.69172425\n",
+      "  2.07299777  0.43534212  0.19479405  1.11094621  2.39082355  1.40293774\n",
+      "  2.43726907 -0.90681405  0.01419987  1.56648021 -1.48270231 -0.67502597\n",
+      " -0.20184435  1.58614653  1.49718582 -0.17319645  1.83138484  4.45613393\n",
+      " -0.93694432  1.93382461  3.55447616 -0.29002249 -1.44250368  0.8988223\n",
+      " -1.02372679  0.90013841 -0.75943484 -0.91833803  0.37332539  2.82397984\n",
+      "  1.76714317  2.17499686  8.07133963  2.32851405 -0.02374999  0.07347646\n",
+      "  2.16281072  2.61574533 -0.59295161  0.26196702 -1.94032496  0.30544827\n",
+      "  0.02801977 -0.90248956  1.8552339  -0.39976689 -0.85151332 -1.18404848\n",
+      "  6.22614239 -1.58022051  1.98766345  0.12045702 -1.19289211  0.5818957\n",
+      "  4.7543388   0.92316236  1.40854953  3.44012979  2.58064908  2.93933722\n",
+      "  0.06352485  3.86178588 -0.10924066  2.43098576  2.62445785  2.07171211\n",
+      " -1.2090521   2.15015799  0.36287424  3.94164489 -1.50948111 -1.92828529\n",
+      "  1.17986044 -0.04288594  1.56294901  2.13407241  6.01716456  1.50495372\n",
+      "  6.04497167  2.3817266   2.1097914   2.93067322  4.74078434 -1.88529786\n",
+      "  0.25545518  2.27596201 -1.51196462  1.55495111  0.47901417  2.43787659\n",
+      "  0.77427493 -0.98418515  2.49889824 -1.1499305  -1.39259619 -0.15787579\n",
+      "  5.27948969  0.40382235 -1.12501249  1.5829014   1.77587682  4.39045336\n",
+      "  1.8735487   2.46922003  1.75881669  1.16362566 -0.02016873  3.25098079\n",
+      "  2.24234814  4.07890089  1.79889181  0.92209311  0.80063593  4.17014956\n",
+      "  0.14379784  2.00821682  1.77849851  2.62410513]\n"
      ]
     }
    ],
    "source": [
-    "print(mean_squared_error(np.mean(bcf_result[2], axis=1), y_test))"
+    "print(true_mu)"
    ]
   },
   {
@@ -123,18 +186,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.3616648463025856\n"
+      "[[-0.27231121 -0.15802242 -0.11514596 ... -0.15385393 -0.06573387\n",
+      "  -0.13114827]\n",
+      " [-0.17577614 -0.15531792 -0.09444619 ... -0.23747505 -0.15955988\n",
+      "  -0.17352617]\n",
+      " [-0.16653047 -0.23012336 -0.25865487 ... -0.20590028 -0.27744345\n",
+      "  -0.26902721]\n",
+      " ...\n",
+      " [-0.27319769 -0.36103053 -0.35124076 ... -0.2103615  -0.1782664\n",
+      "  -0.12743677]\n",
+      " [-0.02765818 -0.09676122 -0.19219316 ... -0.09315378 -0.07574765\n",
+      "  -0.04070369]\n",
+      " [-0.07167381 -0.05160261 -0.12410957 ... -0.25437118 -0.15726972\n",
+      "  -0.21938487]]\n",
+      "[[-0.09582354 -0.06562958 -0.05420542 ... -0.09160685 -0.09223696\n",
+      "  -0.09060468]\n",
+      " [-0.25889359 -0.22669395 -0.24389164 ... -0.26551635 -0.24873014\n",
+      "  -0.27618366]\n",
+      " [-0.30419328 -0.31638303 -0.32902712 ... -0.35064426 -0.30758179\n",
+      "  -0.34972707]\n",
+      " ...\n",
+      " [-0.123807   -0.13599675 -0.13079251 ... -0.21193768 -0.13826744\n",
+      "  -0.13611861]\n",
+      " [-0.14821247 -0.16040223 -0.15397864 ... -0.13576621 -0.09270374\n",
+      "  -0.08735229]\n",
+      " [-0.32061547 -0.33280522 -0.32138106 ... -0.27450819 -0.23144572\n",
+      "  -0.22609427]]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(bcf_result[0])\n",
+    "# print(bcf_result[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.45698205774403\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_squared_error(np.mean(bcf_result[2], axis=1), y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.3616648463025856\n"
      ]
     }
    ],
