--- a/notebooks/four_moves.ipynb
+++ b/notebooks/four_moves.ipynb
@@ -97,8 +97,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.43887844        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  43  57  -2  -2  -2  -2  -2])]"
+       "[Tree(vars=[ 2 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.12811363        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  14  86  -2  -2  -2  -2  -2])]"
       ]
      },
      "execution_count": 7,
@@ -135,8 +135,8 @@
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.44</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
@@ -170,7 +170,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1e57b247670>"
+       "<graphviz.graphs.Digraph at 0x26a8f1cf730>"
       ]
      },
      "execution_count": 8,
@@ -181,7 +181,7 @@
    "source": [
     "tree_g = move.proposed.trees[0]\n",
     "filename1 = \"tree_g\"\n",
-    "visualize_tree(tree_g, tree_g, filename=filename1, format=\"png\")"
+    "visualize_tree(tree_g, filename=filename1, format=\"png\")"
    ]
   },
   {
@@ -206,15 +206,15 @@
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"146.88\" cy=\"-232.97\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.44</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>1</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.79</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.77</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
@@ -269,7 +269,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1e55ad99ff0>"
+       "<graphviz.graphs.Digraph at 0x26aeecb3dc0>"
       ]
      },
      "execution_count": 9,
@@ -284,7 +284,7 @@
     "trees = move.proposed.trees\n",
     "tree_gg = move.proposed.trees[0]\n",
     "filename11 = \"tree_gg\"\n",
-    "visualize_tree(tree_gg, tree_gg, filename=filename11, format=\"png\")"
+    "visualize_tree(tree_gg, filename=filename11, format=\"png\")"
    ]
   },
   {
@@ -302,8 +302,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.43887844        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  43  57  -2  -2  -2  -2  -2])]"
+       "[Tree(vars=[ 2 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.12811363        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  14  86  -2  -2  -2  -2  -2])]"
       ]
      },
      "execution_count": 10,
@@ -341,8 +341,8 @@
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.44</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
@@ -376,7 +376,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1e57b247970>"
+       "<graphviz.graphs.Digraph at 0x26a8f1cf8e0>"
       ]
      },
      "execution_count": 11,
@@ -387,7 +387,7 @@
    "source": [
     "tree_p = move.proposed.trees[0]\n",
     "filename2 = \"tree_p\"\n",
-    "visualize_tree(tree_p, tree_p, filename=filename2, format=\"png\")"
+    "visualize_tree(tree_p, filename=filename2, format=\"png\")"
    ]
   },
   {
@@ -405,8 +405,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0  2 -1 -1 -1 -2 -2 -2], thresholds=[0.85859792 0.78606431        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  93   7  76  17  -2  -2  -2])]"
+       "[Tree(vars=[ 2  1 -1 -1 -1 -2 -2 -2], thresholds=[0.12811363 0.09417735        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  14  86   2  12  -2  -2  -2])]"
       ]
      },
      "execution_count": 12,
@@ -444,15 +444,15 @@
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"146.88\" cy=\"-232.97\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.86</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>1</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.79</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.09</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
@@ -507,7 +507,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1e55ad98040>"
+       "<graphviz.graphs.Digraph at 0x26a8f1cf850>"
       ]
      },
      "execution_count": 13,
@@ -518,7 +518,7 @@
    "source": [
     "tree_c = move.proposed.trees[0]\n",
     "filename3 = \"tree_c\"\n",
-    "visualize_tree(tree_c, tree_c, filename=filename3, format=\"png\")"
+    "visualize_tree(tree_c, filename=filename3, format=\"png\")"
    ]
   },
   {
@@ -536,8 +536,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0  2 -1 -1 -1 -2 -2 -2], thresholds=[0.43887844 0.78606431        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  43  57  37   6  -2  -2  -2])]"
+       "[Tree(vars=[ 2  0 -1 -1 -1 -2 -2 -2], thresholds=[0.12811363 0.77395605        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  14  86  12   2  -2  -2  -2])]"
       ]
      },
      "execution_count": 14,
@@ -557,8 +557,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 2  0 -1 -1 -1 -2 -2 -2], thresholds=[0.78606431 0.43887844        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  83  17  37  46  -2  -2  -2])]"
+       "[Tree(vars=[ 0  2 -1 -1 -1 -2 -2 -2], thresholds=[0.77395605 0.12811363        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  80  20  12  68  -2  -2  -2])]"
       ]
      },
      "execution_count": 15,
@@ -596,15 +596,15 @@
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"146.88\" cy=\"-232.97\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
-       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.79</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.77</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>1</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_0</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.44</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
@@ -659,7 +659,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1e55ad996c0>"
+       "<graphviz.graphs.Digraph at 0x26a8f1cfaf0>"
       ]
      },
      "execution_count": 16,
@@ -670,12 +670,12 @@
    "source": [
     "tree_s = move.proposed.trees[0]\n",
     "filename4 = \"tree_s\"\n",
-    "visualize_tree(tree_s, tree_s, filename=filename4, format=\"png\")"
+    "visualize_tree(tree_s, filename=filename4, format=\"png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
