Enable the initialization of Tree without dataX
& fix the unit tests & fix a potential bug in priors.py & turn on the progress bar & break add_data into add_data and add_thresholds

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -48,29 +48,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running iteration 0\n",
-      "Running iteration 10\n",
-      "Running iteration 20\n",
-      "Running iteration 30\n",
-      "Running iteration 40\n",
-      "Running iteration 50\n",
-      "Running iteration 60\n",
-      "Running iteration 70\n",
-      "Running iteration 80\n",
-      "Running iteration 90\n",
-      "Running iteration 100\n",
-      "Running iteration 110\n",
-      "Running iteration 120\n",
-      "Running iteration 130\n",
-      "Running iteration 140\n",
-      "Running iteration 150\n",
-      "Running iteration 160\n",
-      "Running iteration 170\n",
-      "Running iteration 180\n",
-      "Running iteration 190\n"
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 33.67it/s]\n"
      ]
     }
    ],
@@ -116,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.005733414508936351}\n"
+      "{'eps_sigma2': 0.005733414508936352}\n"
      ]
     }
    ],
