Synchronize with the refactoring
Still very wrong results...

--- a/notebooks/test_bcf.ipynb
+++ b/notebooks/test_bcf.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def generate_bcf_data(n=1000, p=10, noise_level=0.5, random_state=42):\n",
+    "def generate_bcf_data(n=1000, p=4, noise_level=0.5, random_state=42):\n",
     "    rng = np.random.default_rng(random_state)\n",
     "    \n",
     "    X = rng.normal(0, 1, (n, p))\n",
@@ -48,26 +48,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running iteration 0\n",
-      "Running iteration 10\n",
-      "Running iteration 20\n",
-      "Running iteration 30\n",
-      "Running iteration 40\n",
-      "Running iteration 50\n",
-      "Running iteration 60\n",
-      "Running iteration 70\n",
-      "Running iteration 80\n",
-      "Running iteration 90\n",
-      "Running iteration 100\n",
-      "Running iteration 110\n",
-      "Running iteration 120\n",
-      "Running iteration 130\n",
-      "Running iteration 140\n",
-      "Running iteration 150\n",
-      "Running iteration 160\n",
-      "Running iteration 170\n",
-      "Running iteration 180\n",
-      "Running iteration 190\n"
+      "[[ 0.0660307   1.12724121  0.46750934 -0.85929246]\n",
+      " [-0.91945229  0.49716074  0.14242574  0.69048535]\n",
+      " [-0.3191066   0.21723119 -0.20208325 -0.57789411]\n",
+      " [-0.05928265 -0.72928694 -0.41447307  0.63391038]\n",
+      " [ 1.5791855   0.49455666  0.97366351  1.24196   ]\n",
+      " [ 1.72869764 -0.98685708 -0.24527785  0.77733758]\n",
+      " [ 1.79437005  1.31480787 -0.10973418  0.35272016]\n",
+      " [-0.65056362 -0.67421246 -0.71233706 -0.87950963]\n",
+      " [-0.13108665 -1.83090583  0.92829699 -0.60500071]\n",
+      " [-0.15252253  0.38339386  0.99982425 -1.05853608]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train[0:10, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:07<00:00, 28.52it/s]\n"
      ]
     }
    ],
@@ -90,32 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "bcf_result = bcf.predict_mean(X_test, z_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.54669433 -0.51575534 -1.59230643  4.38294783  0.23879614 -0.58645334\n",
-      " -1.18404848  2.01948447  0.54231799  0.01365932]\n",
-      "[ 0.56593691  0.43713884 -0.34946521  0.14309025  1.08265377  0.87684551\n",
-      "  0.25262578  0.74538335 -0.17369142  0.397889  ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mu_test[0:10])\n",
-    "print(tau_test[0:10])"
    ]
   },
   {
@@ -127,16 +113,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-49.25558521 -47.04657084 -49.25558521 -38.015537   -48.20189178\n",
-      " -48.73100482 -49.25558521 -47.05882873 -48.88826311 -49.25558521]\n",
-      "[-27.30272924 -25.16638152 -27.82990031 -20.10066101 -26.76907796\n",
-      " -27.41681809 -28.07060733 -25.62590694 -29.14730617 -28.73297877]\n"
+      "[ 0.32830421  1.97569722  1.87179898 -0.58645334  1.57840294 -1.62047604\n",
+      " -1.04906521  2.81244886 -1.79417073  0.07297647]\n",
+      "[ 0.91869334 -0.37490667 -0.73540315  0.87684551  0.77705825  1.07765602\n",
+      " -0.24252774  0.80212718 -0.03598128  1.71020751]\n"
      ]
     }
    ],
    "source": [
-    "print(bcf_result[0][0:10])\n",
-    "print(bcf_result[1][0:10])"
+    "print(mu_test[0:10])\n",
+    "print(tau_test[0:10])"
    ]
   },
   {
@@ -148,41 +134,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.123774624866945\n"
+      "[-47.93188535 -51.12461387 -51.12461387 -50.58730143 -51.12461387\n",
+      " -51.12461387 -51.12461387 -41.80783354 -51.12461387 -48.80099429]\n",
+      "[-38.4908773  -38.4908773  -38.4908773  -38.4908773  -38.03732651\n",
+      " -38.4908773  -38.4908773  -34.42720899 -38.4908773  -38.4908773 ]\n"
      ]
     }
    ],
    "source": [
-    "print(mean_squared_error(np.mean(bcf_result[2], axis=1), y_test))"
+    "print(bcf_result[0][0:10])\n",
+    "print(bcf_result[1][0:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5314.907124786562\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_squared_error(bcf_result[2], y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-3.18901233, -3.14922538, -3.10004103, -3.03921503, -3.18166351,\n",
-       "       -3.21154326, -3.18183622, -3.10676569, -3.22645011, -3.18908948,\n",
-       "       -3.08522202, -3.12971113, -3.20543036, -3.05988483, -3.33791747,\n",
-       "       -3.06623325, -3.17222586, -3.15414745, -3.18698642, -3.10589177,\n",
-       "       -3.10208394, -3.13981763, -3.02303773, -3.18476844, -3.12856429,\n",
-       "       -3.03770024, -3.0759509 , -3.18367701, -3.19679083, -3.09898327,\n",
-       "       -3.12225554, -3.13591076, -3.12395639, -3.19621599, -3.05529295,\n",
-       "       -3.13747383, -3.15343735, -3.20090348, -3.06413098, -2.8969067 ,\n",
-       "       -3.16508478, -3.11918572, -3.13392106, -3.22502351, -3.06903249,\n",
-       "       -3.17258849, -3.13575054, -3.17147294, -3.18418621, -3.22253932,\n",
-       "       -3.01108473, -3.2211039 , -3.19965803, -3.10628653, -3.06204315,\n",
-       "       -3.20020574, -2.99440505, -2.97488509, -3.14646601, -3.19319967,\n",
-       "       -3.13994192, -3.12947754, -3.13734884, -3.22547481, -3.07884877,\n",
-       "       -3.18377584, -3.26136836, -3.16224746, -3.12001615, -3.24161187,\n",
-       "       -3.18093129, -3.21040735, -3.09596812, -3.15515228, -3.110532  ,\n",
-       "       -3.14301986, -3.08451351, -3.07530957, -3.09966897, -3.17479278])"
+       "array([-38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.03732651, -38.4908773 , -38.4908773 , -34.42720899,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.03362695,\n",
+       "       -38.03362695, -38.4908773 , -36.65214323, -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -34.25908121, -38.4908773 ,\n",
+       "       -34.25653145, -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.4908773 , -37.52426602, -38.4908773 , -38.03732651,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.03732651,\n",
+       "       -34.2594069 , -38.4908773 , -34.42720899, -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.11292352, -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -37.52328615, -37.37287038,\n",
+       "       -38.4908773 , -34.43141571, -36.65214323, -38.4908773 ,\n",
+       "       -38.4908773 , -36.67879573, -38.11292352, -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.03732651, -38.11292352,\n",
+       "       -38.4908773 , -29.04067507, -34.43552556, -38.4908773 ,\n",
+       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
+       "       -38.11292352, -37.65937273, -38.4908773 , -37.37287038])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.3616648463025856\n"
+      "5.142700247470763\n"
      ]
     }
    ],
