Fix a bug in BCFParamView

--- a/notebooks/test_bcf.ipynb
+++ b/notebooks/test_bcf.ipynb
@@ -12,7 +12,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "from bart_playground.bcf.bcf import BCF"
+    "from bart_playground.bcf.bcf import BCF\n",
+    "from bart_playground.params import Tree"
    ]
   },
   {
@@ -74,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:07<00:00, 28.52it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:09<00:00, 20.06it/s]\n"
      ]
     }
    ],
@@ -97,7 +98,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_1 <= -1.596 (split, n = 320)\n",
+      "\tVal: -0.004 (leaf, n = 26)\n",
+      "\tVal: 0.008 (leaf, n = 294)\n",
+      "[ 1 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.00368509  0.00810382         nan         nan         nan\n",
+      "         nan         nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree_sp : Tree = bcf.sampler.trace[-1].mu_trees[70]\n",
+    "\n",
+    "print(tree_sp)\n",
+    "print(tree_sp.vars)\n",
+    "print(tree_sp.leaf_vals)\n",
+    "# print(bcf.sampler.trace[-1].evaluate(z = np.zeros_like(y_train, dtype = bool), X = X_train)[0:10])\n",
+    "\n",
+    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))\n",
+    "\n",
+    "# if (bcf.sampler.trace[-1].evaluate(z_train) == bcf.sampler.trace[-1].evaluate(z_train, X_train)).all():\n",
+    "#     print(\"True\")\n",
+    "# else:\n",
+    "#     print(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -127,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-47.93188535 -51.12461387 -51.12461387 -50.58730143 -51.12461387\n",
-      " -51.12461387 -51.12461387 -41.80783354 -51.12461387 -48.80099429]\n",
-      "[-38.4908773  -38.4908773  -38.4908773  -38.4908773  -38.03732651\n",
-      " -38.4908773  -38.4908773  -34.42720899 -38.4908773  -38.4908773 ]\n"
+      "[-0.29869064 -0.26226982 -0.2046228  -0.27577944 -0.18551825 -0.23030756\n",
+      " -0.18987976 -0.2775981  -0.22823677 -0.19619618]\n",
+      "[ 0.034831    0.050989    0.02076494  0.00599071  0.02355827 -0.01817051\n",
+      " -0.00260039  0.01325958 -0.03060738 -0.00974574]\n"
      ]
     }
    ],
@@ -155,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5314.907124786562\n"
+      "5.6517325131901845\n"
      ]
     }
    ],
@@ -165,41 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([-38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.03732651, -38.4908773 , -38.4908773 , -34.42720899,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.03362695,\n",
-       "       -38.03362695, -38.4908773 , -36.65214323, -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -34.25908121, -38.4908773 ,\n",
-       "       -34.25653145, -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.4908773 , -37.52426602, -38.4908773 , -38.03732651,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.03732651,\n",
-       "       -34.2594069 , -38.4908773 , -34.42720899, -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.11292352, -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -37.52328615, -37.37287038,\n",
-       "       -38.4908773 , -34.43141571, -36.65214323, -38.4908773 ,\n",
-       "       -38.4908773 , -36.67879573, -38.11292352, -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.03732651, -38.11292352,\n",
-       "       -38.4908773 , -29.04067507, -34.43552556, -38.4908773 ,\n",
-       "       -38.4908773 , -38.4908773 , -38.4908773 , -38.4908773 ,\n",
-       "       -38.11292352, -37.65937273, -38.4908773 , -37.37287038])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.034831    0.050989    0.02076494  0.00599071  0.02355827 -0.01817051\n",
+      " -0.00260039  0.01325958 -0.03060738 -0.00974574]\n",
+      "[-0.26385963 -0.26226982 -0.2046228  -0.27577944 -0.18551825 -0.23030756\n",
+      " -0.19248015 -0.26433852 -0.22823677 -0.20594192]\n"
+     ]
     }
    ],
    "source": [
-    "bcf_result[1]"
+    "print(bcf_result[1][0:10])\n",
+    "print(bcf_result[2][0:10])"
    ]
   },
   {
