--- a/test/break_combine.ipynb
+++ b/test/break_combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +137,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x21ba0bbf250>"
+       "<graphviz.graphs.Digraph at 0x255e1e36d40>"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -211,10 +211,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x21ba0bbdf60>"
+       "<graphviz.graphs.Digraph at 0x255e1e371f0>"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        " Tree(vars=[ 2 -1 -1 -2], thresholds=[0.3 nan nan nan], leaf_vals=[nan  3. -3. nan], n_vals=[100  -2  -2  -2  -2  -2  -2  -2])]"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "0"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "True"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -360,10 +360,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x21ba0bbde10>"
+       "<graphviz.graphs.Digraph at 0x255e1e36bc0>"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -431,10 +431,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x21ba0bbe2c0>"
+       "<graphviz.graphs.Digraph at 0x255e1e37d60>"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "        nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  11  89  -2  -2  -2  -2  -2])"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,17 +485,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Tree(vars=[ 1 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.69736803        nan        nan        nan        nan        nan\n",
-       "        nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  69  31  -2  -2  -2  -2  -2])"
+       "2"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(move.proposed.trees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tree(vars=[ 2 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.12811363        nan        nan        nan        nan        nan\n",
+       "        nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  14  86  -2  -2  -2  -2  -2])"
+      ]
+     },
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +547,7 @@
        "True"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +559,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(move.proposed.trees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -551,81 +591,81 @@
        "<!-- Generated by graphviz version 12.2.1 (20241206.2353)\n",
        " -->\n",
        "<!-- Pages: 1 -->\n",
-       "<svg width=\"267pt\" height=\"270pt\"\n",
-       " viewBox=\"0.00 0.00 267.18 269.97\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"255pt\" height=\"270pt\"\n",
+       " viewBox=\"0.00 0.00 254.75 269.97\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 265.97)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-265.97 263.18,-265.97 263.18,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-265.97 250.75,-265.97 250.75,4 -4,4\"/>\n",
        "<!-- 0 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>0</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"72.3\" cy=\"-232.97\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"72.3\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_1</text>\n",
-       "<text text-anchor=\"middle\" x=\"72.3\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.09</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"146.88\" cy=\"-232.97\" rx=\"72.3\" ry=\"28.99\"/>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-236.17\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"146.88\" y=\"-219.67\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.09</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>1</title>\n",
-       "<polygon fill=\"none\" stroke=\"black\" points=\"86.18,-142.99 12.43,-142.99 12.43,-101.99 86.18,-101.99 86.18,-142.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"49.3\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
-       "<text text-anchor=\"middle\" x=\"49.3\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.88\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_2</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.13</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>0&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M66.32,-203.75C63.12,-188.65 59.16,-170.01 55.88,-154.5\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"59.32,-153.89 53.83,-144.83 52.48,-155.34 59.32,-153.89\"/>\n",
-       "<text text-anchor=\"middle\" x=\"73.43\" y=\"-172.68\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Left</text>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M130.56,-204.32C122.74,-191.06 113.25,-174.98 104.81,-160.67\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"108.03,-159.23 99.93,-152.4 102,-162.79 108.03,-159.23\"/>\n",
+       "<text text-anchor=\"middle\" x=\"129.96\" y=\"-172.68\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Left</text>\n",
        "</g>\n",
        "<!-- 2 -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
+       "<g id=\"node5\" class=\"node\">\n",
        "<title>2</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"176.3\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"176.3\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_1</text>\n",
-       "<text text-anchor=\"middle\" x=\"176.3\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.70</text>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"246.75,-142.99 173,-142.99 173,-101.99 246.75,-101.99 246.75,-142.99\"/>\n",
+       "<text text-anchor=\"middle\" x=\"209.88\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
+       "<text text-anchor=\"middle\" x=\"209.88\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;2 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>0&#45;&gt;2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M97.74,-205.44C111.44,-191.15 128.5,-173.35 143.22,-158\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"145.68,-160.49 150.08,-150.85 140.63,-155.64 145.68,-160.49\"/>\n",
-       "<text text-anchor=\"middle\" x=\"145.53\" y=\"-172.68\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Right</text>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M162.94,-204.32C172.03,-188.66 183.4,-169.08 192.67,-153.12\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"195.66,-154.94 197.66,-144.53 189.61,-151.42 195.66,-154.94\"/>\n",
+       "<text text-anchor=\"middle\" x=\"197.15\" y=\"-172.68\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Right</text>\n",
        "</g>\n",
-       "<!-- 5 -->\n",
-       "<g id=\"node4\" class=\"node\">\n",
-       "<title>5</title>\n",
-       "<polygon fill=\"none\" stroke=\"black\" points=\"167.18,-41 93.43,-41 93.43,0 167.18,0 167.18,-41\"/>\n",
-       "<text text-anchor=\"middle\" x=\"130.3\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
-       "<text text-anchor=\"middle\" x=\"130.3\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
+       "<!-- 3 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>3</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"73.75,-41 0,-41 0,0 73.75,0 73.75,-41\"/>\n",
+       "<text text-anchor=\"middle\" x=\"36.88\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
+       "<text text-anchor=\"middle\" x=\"36.88\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;5 -->\n",
+       "<!-- 1&#45;&gt;3 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>2&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M163.49,-93.64C157.45,-80.51 150.23,-64.82 144.07,-51.43\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"147.4,-50.28 140.04,-42.66 141.04,-53.21 147.4,-50.28\"/>\n",
-       "<text text-anchor=\"middle\" x=\"165.93\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Left</text>\n",
+       "<title>1&#45;&gt;3</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M70.06,-93.64C64.02,-80.51 56.8,-64.82 50.65,-51.43\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"53.97,-50.28 46.61,-42.66 47.61,-53.21 53.97,-50.28\"/>\n",
+       "<text text-anchor=\"middle\" x=\"72.5\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Left</text>\n",
        "</g>\n",
-       "<!-- 6 -->\n",
-       "<g id=\"node5\" class=\"node\">\n",
-       "<title>6</title>\n",
-       "<polygon fill=\"none\" stroke=\"black\" points=\"259.18,-41 185.43,-41 185.43,0 259.18,0 259.18,-41\"/>\n",
-       "<text text-anchor=\"middle\" x=\"222.3\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
-       "<text text-anchor=\"middle\" x=\"222.3\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
+       "<!-- 4 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>4</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"165.75,-41 92,-41 92,0 165.75,0 165.75,-41\"/>\n",
+       "<text text-anchor=\"middle\" x=\"128.88\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
+       "<text text-anchor=\"middle\" x=\"128.88\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: nan</text>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;6 -->\n",
+       "<!-- 1&#45;&gt;4 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>2&#45;&gt;6</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M189.12,-93.64C195.16,-80.51 202.37,-64.82 208.53,-51.43\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"211.57,-53.21 212.57,-42.66 205.21,-50.28 211.57,-53.21\"/>\n",
-       "<text text-anchor=\"middle\" x=\"219.77\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Right</text>\n",
+       "<title>1&#45;&gt;4</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M95.69,-93.64C101.73,-80.51 108.95,-64.82 115.1,-51.43\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"118.14,-53.21 119.14,-42.66 111.78,-50.28 118.14,-53.21\"/>\n",
+       "<text text-anchor=\"middle\" x=\"126.35\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Right</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x21ba0bbefb0>"
+       "<graphviz.graphs.Digraph at 0x255e1e35e10>"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
