Complete the two-arm version of BCF
Fix a bug in BCFSampler caused by not deep-copying

--- a/notebooks/01_debug_bcf_tau.ipynb
+++ b/notebooks/01_debug_bcf_tau.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test BCF when tau_trees are set to 0 (equivalent to BART)"
+    "### Test BCF tau when mu_trees are set to 0 (equivalent to BART)"
    ]
   },
   {
@@ -38,7 +38,12 @@
      "output_type": "stream",
      "text": [
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
-      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
+      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n",
+      "[[0.78692438 0.66485086]\n",
+      " [0.3179911  0.50452624]\n",
+      " [0.55485247 0.37092228]\n",
+      " [0.12275793 0.83111267]\n",
+      " [0.92484187 0.09911314]]\n"
      ]
     }
    ],
@@ -47,9 +52,10 @@
     "                  \"prune\" : 0.5}\n",
     "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
-    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, np.zeros_like(y), random_state=42)\n",
+    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, (1 - np.zeros_like(y)).astype(bool), random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
-    "print(y_train[:12])"
+    "print(y_train[:12])\n",
+    "print(X_train[0:5, :])"
    ]
   },
   {
@@ -61,7 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 29.91it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 29.57it/s]\n"
      ]
     }
    ],
@@ -71,7 +77,10 @@
     "\n",
     "bcf = BCF(\n",
     "    n_mu_trees=100,       # Number of prognostic effect trees\n",
-    "    n_tau_trees=50,       # Number of treatment effect trees\n",
+    "    n_tau_trees=100,       # Number of treatment effect trees\n",
+    "    tau_alpha=0.95,\n",
+    "    tau_beta=2,\n",
+    "    tau_k=2,\n",
     "    ndpost=100,          # Posterior samples\n",
     "    nskip=100,            # Burn-in iterations\n",
     "    random_state=42\n",
@@ -96,7 +105,7 @@
     }
    ],
    "source": [
-    "arrays = [tree.vars for tree in bcf.sampler.trace[-1].mu_trees]\n",
+    "arrays = [tree.vars for tree in bcf.sampler.trace[-1].tau_trees]\n",
     "counts = np.array([np.count_nonzero(arr >= 0) for arr in arrays])\n",
     "print(counts)\n",
     "deep_trees = np.array([count >= 3 for count in counts])\n",
@@ -145,7 +154,7 @@
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bcf.sampler.trace[-1].mu_trees[72]\n",
+    "tree_sp : Tree = bcf.sampler.trace[-1].tau_trees[72]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,13 +241,13 @@
     }
    ],
    "source": [
-    "print(bcf.sampler.trace[-1].mu_view.evaluate(X_train)[:12])\n",
+    "print(bcf.sampler.trace[-1].tau_view.evaluate(X_train)[:12])\n",
     "print(bcf.preprocessor.transform_y(y_train)[:12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,7 @@
     }
    ],
    "source": [
-    "if all([(bcf.sampler.trace[-1].mu_trees[i].evaluate() == bcf.sampler.trace[-1].mu_trees[i].evaluate(X_train)).all()\n",
+    "if all([(bcf.sampler.trace[-1].tau_trees[i].evaluate() == bcf.sampler.trace[-1].tau_trees[i].evaluate(X_train)).all()\n",
     "            for i in range(100)]):\n",
     "    print(\"True\")\n",
     "else:\n",
