--- a/notebooks/01_debug_bcf_mu.ipynb
+++ b/notebooks/01_debug_bcf_mu.ipynb
@@ -1,26 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import sys\n",
-    "from pyinstrument import Profiler\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from bart_playground import *\n",
-    "import bartz"
+    "### Test BCF mu when tau_trees are set to 0 (equivalent to BART)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import bartz\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "from bart_playground import *\n",
+    "from bart_playground.bcf.bcf import BCF\n",
+    "from bart_playground.params import Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +38,12 @@
      "output_type": "stream",
      "text": [
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
-      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
+      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n",
+      "[[0.78692438 0.66485086]\n",
+      " [0.3179911  0.50452624]\n",
+      " [0.55485247 0.37092228]\n",
+      " [0.12275793 0.83111267]\n",
+      " [0.92484187 0.09911314]]\n"
      ]
     }
    ],
@@ -37,36 +52,42 @@
     "                  \"prune\" : 0.5}\n",
     "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, (1 - np.zeros_like(y)).astype(bool), random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
-    "print(y_train[:12])"
+    "print(y_train[:12])\n",
+    "print(X_train[0:5, :])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 33.18it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 30.88it/s]\n"
      ]
     }
    ],
    "source": [
-    "# profiler = Profiler()\n",
-    "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
-    "bart.fit(X_train, y_train)\n",
-    "# profiler.stop()\n",
-    "# profiler.print()"
+    "# bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "# bart.fit(X_train, y_train)\n",
+    "\n",
+    "bcf = BCF(\n",
+    "    n_mu_trees=100,       # Number of prognostic effect trees\n",
+    "    n_tau_trees=50,       # Number of treatment effect trees\n",
+    "    ndpost=100,          # Posterior samples\n",
+    "    nskip=100,            # Burn-in iterations\n",
+    "    random_state=42\n",
+    ")\n",
+    "bcf.fit(X_train, y_train, z_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +102,7 @@
     }
    ],
    "source": [
-    "arrays = [tree.vars for tree in bart.trace[-1].trees]\n",
+    "arrays = [tree.vars for tree in bcf.sampler.trace[-1].mu_trees]\n",
     "counts = np.array([np.count_nonzero(arr >= 0) for arr in arrays])\n",
     "print(counts)\n",
     "deep_trees = np.array([count >= 3 for count in counts])\n",
@@ -90,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +123,12 @@
     }
    ],
    "source": [
-    "print(bart.sampler.trace[-1].global_params)"
+    "print(bcf.sampler.trace[-1].global_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +151,7 @@
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[72]\n",
+    "tree_sp : Tree = bcf.sampler.trace[-1].mu_trees[72]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
@@ -141,29 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_train where X_train[:,0] <= 0.830 mean: 0.28478345154810286\n",
-      "y_train where X_train[:,0] > 0.830 mean: 0.5282667945838203\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_train_le = y_train[X_train[:, 0] <= 0.830]\n",
-    "y_train_gt = y_train[X_train[:, 0] > 0.830]\n",
-    "\n",
-    "print(\"y_train where X_train[:,0] <= 0.830 mean:\", y_train_le.mean())\n",
-    "print(\"y_train where X_train[:,0] > 0.830 mean:\", y_train_gt.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,25 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023709398713852352,\n",
+       "{'bcf': 0.023709398713852352,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "models = {\"bart\" : bart, \n",
+    "models = {\"bcf\" : bcf, \n",
     "          \"rf\" : rf, \n",
     "          \"lr\" : lr,\n",
     "          \"btz\" : btz}\n",
@@ -215,6 +214,8 @@
     "for model_name, model in models.items():\n",
     "    if model_name == \"btz\":\n",
     "        results[model_name] = mean_squared_error(y_test, btpred)\n",
+    "    elif model_name == \"bcf\":\n",
+    "        results[model_name] = mean_squared_error(y_test, bcf.predict_mean(X_test, z_test)[2])\n",
     "    else:\n",
     "        results[model_name] = mean_squared_error(y_test, model.predict(X_test))\n",
     "results"
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +238,13 @@
     }
    ],
    "source": [
-    "print(bart.sampler.trace[-1].evaluate(X_train)[:12])\n",
-    "print(bart.preprocessor.transform_y(y_train)[:12])"
+    "print(bcf.sampler.trace[-1].mu_view.evaluate(X_train)[:12])\n",
+    "print(bcf.preprocessor.transform_y(y_train)[:12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
     }
    ],
    "source": [
-    "if all([(bart.sampler.trace[-1].trees[i].evaluate() == bart.sampler.trace[-1].trees[i].evaluate(X_train)).all()\n",
+    "if all([(bcf.sampler.trace[-1].mu_trees[i].evaluate() == bcf.sampler.trace[-1].mu_trees[i].evaluate(X_train)).all()\n",
     "            for i in range(100)]):\n",
     "    print(\"True\")\n",
     "else:\n",
