--- a/notebooks/test_bcf.ipynb
+++ b/notebooks/test_bcf.ipynb
@@ -13,31 +13,37 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "from bart_playground.bcf.bcf import BCF\n",
-    "from bart_playground.params import Tree"
+    "from bart_playground.params import Tree\n",
+    "from bart_playground import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.02215361  0.39849321  0.08358079  0.50582743  0.50321077 -0.05778941\n",
+      "  0.48579968  0.3886612  -0.54313394  0.65882761  0.02723698 -0.00511971]\n"
+     ]
+    }
+   ],
    "source": [
+    "proposal_probs = {\"grow\" : 0.5,\n",
+    "                  \"prune\" : 0.5}\n",
+    "n_samples = 320\n",
+    "generator = DataGenerator(n_samples=n_samples, n_features=2, noise=0.1, random_seed=42)\n",
+    "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
+    "z_rng = np.random.default_rng(0)\n",
+    "z = z_rng.binomial(1, 0.5, n_samples).astype(bool)\n",
+    "y = y + z * 0.5 - 0.5\n",
     "\n",
-    "def generate_bcf_data(n=1000, p=4, noise_level=0.5, random_state=42):\n",
-    "    rng = np.random.default_rng(random_state)\n",
-    "    \n",
-    "    X = rng.normal(0, 1, (n, p))\n",
-    "    mu = 2 * np.sin(np.pi * X[:,0]) + X[:,1]**2\n",
-    "    tau = 0.5 * X[:,2] + 0.5 * (X[:,3] > 0)\n",
-    "    z = rng.binomial(1, 0.5, n)\n",
-    "    y = mu + z * tau + rng.normal(0, noise_level, n)\n",
-    "    \n",
-    "    return X, y, z, mu, tau\n",
-    "\n",
-    "# Generate data\n",
-    "X, y, z, true_mu, true_tau = generate_bcf_data(n=400)\n",
-    "X_train, X_test, y_train, y_test, z_train, z_test, mu_train, mu_test, tau_train, tau_test = \\\n",
-    "    train_test_split(X, y, z, true_mu, true_tau, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, z, random_state=42)\n",
+    "np.set_printoptions(suppress=True)\n",
+    "print(y_train[:12])"
    ]
   },
   {
@@ -49,21 +55,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.0660307   1.12724121  0.46750934 -0.85929246]\n",
-      " [-0.91945229  0.49716074  0.14242574  0.69048535]\n",
-      " [-0.3191066   0.21723119 -0.20208325 -0.57789411]\n",
-      " [-0.05928265 -0.72928694 -0.41447307  0.63391038]\n",
-      " [ 1.5791855   0.49455666  0.97366351  1.24196   ]\n",
-      " [ 1.72869764 -0.98685708 -0.24527785  0.77733758]\n",
-      " [ 1.79437005  1.31480787 -0.10973418  0.35272016]\n",
-      " [-0.65056362 -0.67421246 -0.71233706 -0.87950963]\n",
-      " [-0.13108665 -1.83090583  0.92829699 -0.60500071]\n",
-      " [-0.15252253  0.38339386  0.99982425 -1.05853608]]\n"
+      "[[0.37365773 0.09446667]\n",
+      " [0.68071453 0.39363046]\n",
+      " [0.43209304 0.62730884]\n",
+      " [0.96623191 0.59604255]\n",
+      " [0.64386512 0.82276161]]\n"
      ]
     }
    ],
    "source": [
-    "print(X_train[0:10, :])"
+    "print(X_train[0:5, :])"
    ]
   },
   {
@@ -75,19 +76,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:09<00:00, 20.06it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 19.80it/s]\n"
      ]
     }
    ],
    "source": [
     "bcf = BCF(\n",
     "    n_mu_trees=100,       # Number of prognostic effect trees\n",
-    "    n_tau_trees=50,       # Number of treatment effect trees\n",
-    "    mu_alpha=0.95,        # Tree depth prior for mu\n",
-    "    mu_beta=2.0,          # Tree depth prior for mu\n",
-    "    tau_alpha=0.5,        # Simpler trees for treatment effects\n",
-    "    tau_beta=3.0,         # Penalize complex tau trees\n",
-    "    tau_k=0.5,            # Regularization for treatment effects\n",
+    "    n_tau_trees=100,       # Number of treatment effect trees\n",
     "    ndpost=100,          # Posterior samples\n",
     "    nskip=100,            # Burn-in iterations\n",
     "    random_state=42\n",
@@ -98,18 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= -1.596 (split, n = 320)\n",
-      "\tVal: -0.004 (leaf, n = 26)\n",
-      "\tVal: 0.008 (leaf, n = 294)\n",
-      "[ 1 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.00368509  0.00810382         nan         nan         nan\n",
+      "X_1 <= 0.867 (split, n = 240)\n",
+      "\tX_1 <= 0.607 (split, n = 206)\n",
+      "\t\tVal: -0.035 (leaf, n = 139)\n",
+      "\t\tVal: -0.016 (leaf, n = 67)\n",
+      "\tVal: -0.011 (leaf, n = 34)\n",
+      "[ 1  1 -1 -1 -1 -2 -2 -2]\n",
+      "[        nan         nan -0.01145799 -0.03543598 -0.01615224         nan\n",
       "         nan         nan]\n"
      ]
     }
@@ -122,17 +120,12 @@
     "print(tree_sp.leaf_vals)\n",
     "# print(bcf.sampler.trace[-1].evaluate(z = np.zeros_like(y_train, dtype = bool), X = X_train)[0:10])\n",
     "\n",
-    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))\n",
-    "\n",
-    "# if (bcf.sampler.trace[-1].evaluate(z_train) == bcf.sampler.trace[-1].evaluate(z_train, X_train)).all():\n",
-    "#     print(\"True\")\n",
-    "# else:\n",
-    "#     print(\"False\")"
+    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,38 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.32830421  1.97569722  1.87179898 -0.58645334  1.57840294 -1.62047604\n",
-      " -1.04906521  2.81244886 -1.79417073  0.07297647]\n",
-      "[ 0.91869334 -0.37490667 -0.73540315  0.87684551  0.77705825  1.07765602\n",
-      " -0.24252774  0.80212718 -0.03598128  1.71020751]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mu_test[0:10])\n",
-    "print(tau_test[0:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.29869064 -0.26226982 -0.2046228  -0.27577944 -0.18551825 -0.23030756\n",
-      " -0.18987976 -0.2775981  -0.22823677 -0.19619618]\n",
-      "[ 0.034831    0.050989    0.02076494  0.00599071  0.02355827 -0.01817051\n",
-      " -0.00260039  0.01325958 -0.03060738 -0.00974574]\n"
+      "[ 0.03393351 -0.04673758 -0.39256706 -0.1203358   0.15368494  0.1379183\n",
+      "  0.06406533 -0.1713516   0.12529618 -0.00822858]\n",
+      "[0.2910598  0.27810602 0.27812756 0.28658596 0.24263927 0.24092817\n",
+      " 0.21273204 0.29206197 0.23034141 0.29607209]\n"
      ]
     }
    ],
@@ -182,20 +154,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TLearner class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import clone\n",
+    "\n",
+    "class TLearner:\n",
+    "    def __init__(self, model_treated, model_control):\n",
+    "        self.model_treated = clone(model_treated)\n",
+    "        self.model_control = clone(model_control)\n",
+    "\n",
+    "    def fit(self, X, y, z):\n",
+    "        X_treated = X[z]\n",
+    "        y_treated = y[z]\n",
+    "        X_control = X[~z]\n",
+    "        y_control = y[~z]\n",
+    "\n",
+    "        # Fit the models.\n",
+    "        self.model_treated.fit(X_treated, y_treated)\n",
+    "        self.model_control.fit(X_control, y_control)\n",
+    "        # return self\n",
+    "\n",
+    "    def predict(self, X, z):\n",
+    "        # Predict outcome: if z is True, use model_treated; else, use model_control.\n",
+    "        preds = np.empty(len(X))\n",
+    "        preds[z] = self.model_treated.predict(X[z])\n",
+    "        preds[~z] = self.model_control.predict(X[~z])\n",
+    "        return preds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "dt = DecisionTreeRegressor(random_state=42)\n",
+    "lr = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tlearner_rf = TLearner(model_treated=rf, model_control=rf)\n",
+    "tlearner_rf.fit(X_train, y_train, z_train)\n",
+    "tlearner_lr = TLearner(model_treated=lr, model_control=lr)\n",
+    "tlearner_lr.fit(X_train, y_train, z_train)\n",
+    "tlearner_dt = TLearner(model_treated=dt, model_control=dt)\n",
+    "tlearner_dt.fit(X_train, y_train, z_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.6517325131901845\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'bcf': 0.0265957411855544,\n",
+       " 'rf': 0.027995018511320614,\n",
+       " 'lr': 0.04275738222331536,\n",
+       " 'dt': 0.04965827443298727}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mean_squared_error(bcf_result[2], y_test))"
+    "models = {\"bcf\" : bcf, \n",
+    "          \"rf\" : tlearner_rf, \n",
+    "          \"lr\" : tlearner_lr,\n",
+    "          \"dt\" : tlearner_dt}\n",
+    "results = {}\n",
+    "for model_name, model in models.items():\n",
+    "    if model_name == \"bcf\":\n",
+    "        results[model_name] = mean_squared_error(y_test, bcf.predict_mean(X_test, z_test)[2])\n",
+    "    else:\n",
+    "        results[model_name] = mean_squared_error(y_test, model.predict(X_test, z_test))\n",
+    "results"
    ]
   },
   {
@@ -207,10 +270,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.034831    0.050989    0.02076494  0.00599071  0.02355827 -0.01817051\n",
-      " -0.00260039  0.01325958 -0.03060738 -0.00974574]\n",
-      "[-0.26385963 -0.26226982 -0.2046228  -0.27577944 -0.18551825 -0.23030756\n",
-      " -0.19248015 -0.26433852 -0.22823677 -0.20594192]\n"
+      "0.0265957411855544\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_squared_error(bcf_result[2], y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2910598  0.27810602 0.27812756 0.28658596 0.24263927 0.24092817\n",
+      " 0.21273204 0.29206197 0.23034141 0.29607209]\n",
+      "[ 0.36622733  0.18484748 -1.02390533  0.05869356  0.50441698  0.47055727\n",
+      " -0.13926953 -0.5953437   0.42559462  0.29425686]\n"
      ]
     }
    ],
@@ -221,14 +301,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.142700247470763\n"
+      "0.11043741638090805\n"
+     ]
+    }
+   ],
+   "source": [
+    "naive = np.zeros_like(y_test)\n",
+    "naive[z_test] = np.mean(y_train[z_train])\n",
+    "naive[~z_test] = np.mean(y_train[~z_train])\n",
+    "\n",
+    "print(mean_squared_error(naive, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.22942363300485438\n"
      ]
     }
    ],
