Ensure consistent `predict` behaviour

--- a/notebooks/test_bcf.ipynb
+++ b/notebooks/test_bcf.ipynb
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 19.80it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:09<00:00, 20.45it/s]\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bcf_result = bcf.predict_mean(X_test, z_test)"
+    "bcf_result = bcf.predict_components(X_test, z_test)"
    ]
   },
   {
@@ -254,10 +254,7 @@
     "          \"dt\" : tlearner_dt}\n",
     "results = {}\n",
     "for model_name, model in models.items():\n",
-    "    if model_name == \"bcf\":\n",
-    "        results[model_name] = mean_squared_error(y_test, bcf.predict_mean(X_test, z_test)[2])\n",
-    "    else:\n",
-    "        results[model_name] = mean_squared_error(y_test, model.predict(X_test, z_test))\n",
+    "    results[model_name] = mean_squared_error(y_test, model.predict(X_test, z_test))\n",
     "results"
    ]
   },
