Add some type annotations

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 33.67it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 30.14it/s]\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.005733414508936352}\n"
+      "{'eps_sigma2': array([0.00573341])}\n"
      ]
     }
    ],
@@ -195,10 +195,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.02370939871385235,\n",
+       "{'bart': 0.023709398713852352,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02328283631252247}"
+       " 'btz': 0.02328283761397566}"
       ]
      },
      "execution_count": 9,
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
