Add some type annotations

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 33.18it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 30.14it/s]\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.005733414508936352}\n"
+      "{'eps_sigma2': array([0.00573341])}\n"
      ]
     }
    ],
